--- a/css/styles.css
+++ b/css/styles.css
@@ -183,3 +183,8 @@
     background-color: #f0f0f0;
 }
 
+.custom-icon svg {
+    filter: drop-shadow(2px 4px 6px rgba(0, 0, 0, 0.2));
+    z-index: 1500;
+}
+
