--- a/css/styles.css
+++ b/css/styles.css
@@ -188,3 +188,45 @@
     z-index: 1500;
 }
 
+
+/* Estilos del popup */
+.custom-popup {
+    position: fixed;
+    bottom: 50%;
+    right: 50%;
+    background: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 15px 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    z-index: 9999;
+    opacity: 0;
+    animation: fadeIn 0.5s forwards;
+}
+
+/* Enlace del popup */
+.custom-popup a {
+    color: #1e90ff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.custom-popup a:hover {
+    text-decoration: underline;
+}
+
+/* Animación de entrada */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
